<project>
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.espertech</groupId>
		<artifactId>esperio-parent</artifactId>
		<version>9.0.0</version>
	</parent>
	<properties>
		<rootPath>${project.parent.parent.basedir}</rootPath>
	</properties>
	<name>EsperIO-CSV</name>
	<artifactId>esperio-csv</artifactId>
	<packaging>jar</packaging>
	<description>EsperIO CSV</description>
	<url>http://www.espertech.com/esper</url>
	<inceptionYear>2005</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License Version 2</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/espertechinc/esper.git</url>
		<developerConnection>scm:git:git@github.com:espertechinc/esper.git</developerConnection>
		<connection>scm:git:git@github.com:espertechinc/esper.git</connection>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus snapshot repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Sonatype Nexus release repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<developers>
		<developer>
			<id>espertech</id>
			<name>EsperTech</name>
			<email>info@espertech.com</email>
			<url>http://www.espertech.com</url>
			<organization>EsperTech</organization>
			<organizationUrl>http://www.espertech.com</organizationUrl>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-common</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-runtime</artifactId>
			<version>${project.version}</version>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper-compiler</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr4-runtime.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>${slf4j-api.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>${reload4j.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<argLine>-Xms256m -Xmx256m</argLine>
					<includes>
						<include>**/Test*.java</include>
					</includes>
					<systemProperties>
						<property>
							<name>log4j.configuration</name>
							<value>log4j.xml</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>empty-javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<classifier>javadoc</classifier>
							<classesDirectory>${basedir}/javadoc</classesDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven.dependency.plugin.version}</version>
				<configuration>
					<outputDirectory>lib</outputDirectory>
					<excludeTransitive>true</excludeTransitive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven.gpg.plugin.version}</version>
				<configuration>
					<passphrase>${gpg.passphrase}</passphrase>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven.bundle.plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>com.espertech.*</Export-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
		<testResources>
			<testResource>
				<directory>etc</directory>
			</testResource>
		</testResources>
	</build>
</project>
